--- a/code/dome_extrusion.ipynb
+++ b/code/dome_extrusion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "15c27017",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "c844a9cd",
    "metadata": {},
    "outputs": [
@@ -335,13 +335,13 @@
        "2005-12-15                                  0.7   9.0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_dome = pd.read_csv('dome_extrusion.txt', header=0, skiprows=0)\n",
+    "df_dome = pd.read_csv('../data/dome_extrusion.txt', header=0, skiprows=0)\n",
     "df_dome.set_index('Date of photography',inplace=True)\n",
     "df_dome.index = pd.to_datetime(df_dome.index).tz_localize(None)\n",
     "df_dome['diff'] = df_dome['Total volume change(x 106 m3)']-df_dome['Total volume change(x 106 m3)'].shift(1)\n",
