--- a/code/tutorial.ipynb
+++ b/code/tutorial.ipynb
@@ -10,16 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "ad09cd2a-7428-4746-b4d2-19766d22cc75",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2663284778.py, line 12)",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mtsthelens'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 12\u001b[0;36m\u001b[0m\n\u001b[0;31m    import ./mtsthelens.preprocessing_functions\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# import sys\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# sys.path.append('/Users/koepflma/Desktop/CSE583/CSE583_MtStHelens/mtsthelens/')\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmtsthelens\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing_functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_data\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mtsthelens'"
      ]
     }
    ],
@@ -35,7 +38,7 @@
     "import math\n",
     "# import sys\n",
     "# sys.path.append('/Users/koepflma/Desktop/CSE583/CSE583_MtStHelens/mtsthelens/')\n",
-    "import mtsthelens.preprocessing_functions"
+    "from mtsthelens.preprocessing_functions import read_data"
    ]
   },
   {
