import and delete error

--- a/example/Example_Tutorial.ipynb
+++ b/example/Example_Tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ad09cd2a-7428-4746-b4d2-19766d22cc75",
    "metadata": {},
    "outputs": [],
@@ -26,8 +26,24 @@
     "import math\n",
     "import sys\n",
     "sys.path.append('../mtsthelens/')\n",
-    "import preprocessing_functions\n",
+    "import preprocessing_functions, manipulation_functions, plotting_functions\n",
     "# import  mtsthelens.preprocessing_functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d1d5e8bf-b89e-4185-9c76-b1ad6f055e9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "# Get the current script’s directory\n",
+    "current_directory = os.getcwd()\n",
+    "# Go back one folder level\n",
+    "parent_directory = os.path.abspath(os.path.join(current_directory, os.pardir))\n",
+    "sys.path.insert(0, parent_directory)\n",
+    "from mtsthelens import plotting_functions, manipulation_functions,preprocessing_functions"
    ]
   },
   {
@@ -40,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "258bcfb5-fa8c-4213-aa9b-42b15db9a6f5",
    "metadata": {},
    "outputs": [
@@ -153,20 +169,20 @@
        "[105264 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# df =  preprocessing_functions.read_data('../data/DSAR_extended2_long.csv')\n",
-    "df =  preprocessing_functions.read_data('../data/example_data_eruption.csv')\n",
+    "df =  preprocessing_functions.read_data('../example/Example_Data/example_data_eruption.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0e55392b-9f2f-4e32-a4b0-c8110509e25e",
    "metadata": {},
    "outputs": [],
@@ -177,13 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "13b1d494-a1c1-4f9d-ac12-33be8f15ff87",
    "metadata": {},
    "outputs": [],
    "source": [
     "# remove outliers\n",
-    "df = df.apply(mask_df,axis=0) # remove outliers (peak detection)"
+    "df = df.apply(preprocessing_functions.mask_df,axis=0) # remove outliers (peak detection)"
    ]
   },
   {
@@ -1463,7 +1479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
