modified the hard code year issue

--- a/example/Example_Tutorial.ipynb
+++ b/example/Example_Tutorial.ipynb
@@ -244,63 +244,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "09f56f61-6b46-41db-afc7-0faa67cdebd1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                    2004      2005\n",
-      "01/01 00:00:00  0.952306  1.403242\n",
-      "01/01 00:10:00  0.957450  1.402937\n",
-      "01/01 00:20:00  0.962799  1.402937\n",
-      "01/01 00:30:00  0.968147  1.402937\n",
-      "01/01 00:40:00  0.982365  1.402407\n",
-      "...                  ...       ...\n",
-      "12/31 23:10:00  1.381505  1.968667\n",
-      "12/31 23:20:00  1.385384  1.961487\n",
-      "12/31 23:30:00  1.394922  1.961453\n",
-      "12/31 23:40:00  1.399854  1.957284\n",
-      "12/31 23:50:00  1.402466  1.953115\n",
-      "\n",
-      "[52559 rows x 2 columns]\n",
-      "            2004      2005\n",
-      "max     2.832102  2.491375\n",
-      "min     0.530687  0.656356\n",
-      "mean    1.274495  1.290978\n",
-      "median  1.185729  1.212956\n",
-      "/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example\n",
-      "                    2004      2005\n",
-      "01/01 00:00:00  0.952306  1.403242\n",
-      "01/01 00:10:00  0.957450  1.402937\n",
-      "01/01 00:20:00  0.962799  1.402937\n",
-      "01/01 00:30:00  0.968147  1.402937\n",
-      "01/01 00:40:00  0.982365  1.402407\n",
-      "...                  ...       ...\n",
-      "12/31 23:10:00  1.381505  1.968667\n",
-      "12/31 23:20:00  1.385384  1.961487\n",
-      "12/31 23:30:00  1.394922  1.961453\n",
-      "12/31 23:40:00  1.399854  1.957284\n",
-      "12/31 23:50:00  1.402466  1.953115\n",
-      "\n",
-      "[52559 rows x 2 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/mtsthelens/manipulation_functions.py:142: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '2.8321024466974105' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  df_yearlyParam[str(year)].loc['max'] = df_stackSpace_year[year].max()\n",
-      "/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/mtsthelens/manipulation_functions.py:142: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_yearlyParam[str(year)].loc['max'] = df_stackSpace_year[year].max()\n",
-      "/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/mtsthelens/manipulation_functions.py:142: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '2.4913752390848782' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  df_yearlyParam[str(year)].loc['max'] = df_stackSpace_year[year].max()\n"
+     "ename": "TypeError",
+     "evalue": "stackInSpace() missing 1 required positional argument: 'years'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m input_filename \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mexample_data_eruption\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# df_dome = manipulation_functions.importData_extrusion()\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# df_median = manipulation_functions.importData_seismic(input_filename)\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m df_median_stackSpace, df_stackSpace_year \u001b[39m=\u001b[39m manipulation_functions\u001b[39m.\u001b[39;49mstackInSpace(df)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m df_yearlyParam \u001b[39m=\u001b[39m manipulation_functions\u001b[39m.\u001b[39mstackSpace_yearParam(df_stackSpace_year)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m manipulation_functions\u001b[39m.\u001b[39mexport_csv(input_filename,df_stackSpace_year,df_yearlyParam)\n",
+      "\u001b[0;31mTypeError\u001b[0m: stackInSpace() missing 1 required positional argument: 'years'"
      ]
     }
    ],
@@ -308,8 +264,8 @@
     "input_filename = 'example_data_eruption'\n",
     "# df_dome = manipulation_functions.importData_extrusion()\n",
     "# df_median = manipulation_functions.importData_seismic(input_filename)\n",
-    "df_median_stackSpace, df_stackSpace_year = manipulation_functions.stackInSpace(df, years=range(2004,2006))\n",
-    "df_yearlyParam = manipulation_functions.stackSpace_yearParam(df_stackSpace_year, years=range(2004,2006))\n",
+    "df_median_stackSpace, df_stackSpace_year = manipulation_functions.stackInSpace(df)\n",
+    "df_yearlyParam = manipulation_functions.stackSpace_yearParam(df_stackSpace_year)\n",
     "manipulation_functions.export_csv(input_filename,df_stackSpace_year,df_yearlyParam)"
    ]
   },
