updated the hard code year issue again

--- a/example/Example_Tutorial.ipynb
+++ b/example/Example_Tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "ad09cd2a-7428-4746-b4d2-19766d22cc75",
    "metadata": {},
    "outputs": [],
@@ -29,18 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('../mtsthelens/')\n",
-    "import preprocessing_functions, manipulation_functions #,plotting_functions\n",
-    "# import  mtsthelens.preprocessing_functions"
+    "# sys.path.append('../mtsthelens/')\n",
+    "# import preprocessing_functions, manipulation_functions #,plotting_functions\n",
+    "# # import  mtsthelens.preprocessing_functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "d1d5e8bf-b89e-4185-9c76-b1ad6f055e9f",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "258bcfb5-fa8c-4213-aa9b-42b15db9a6f5",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "[105264 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "0e55392b-9f2f-4e32-a4b0-c8110509e25e",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "13b1d494-a1c1-4f9d-ac12-33be8f15ff87",
    "metadata": {},
    "outputs": [],
@@ -244,19 +244,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "09f56f61-6b46-41db-afc7-0faa67cdebd1",
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "stackInSpace() missing 1 required positional argument: 'years'",
+     "evalue": "'int' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m input_filename \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mexample_data_eruption\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# df_dome = manipulation_functions.importData_extrusion()\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# df_median = manipulation_functions.importData_seismic(input_filename)\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m df_median_stackSpace, df_stackSpace_year \u001b[39m=\u001b[39m manipulation_functions\u001b[39m.\u001b[39;49mstackInSpace(df)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m df_yearlyParam \u001b[39m=\u001b[39m manipulation_functions\u001b[39m.\u001b[39mstackSpace_yearParam(df_stackSpace_year)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X14sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m manipulation_functions\u001b[39m.\u001b[39mexport_csv(input_filename,df_stackSpace_year,df_yearlyParam)\n",
-      "\u001b[0;31mTypeError\u001b[0m: stackInSpace() missing 1 required positional argument: 'years'"
+      "\u001b[1;32m/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m input_filename \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mexample_data_eruption\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# df_dome = manipulation_functions.importData_extrusion()\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# df_median = manipulation_functions.importData_seismic(input_filename)\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m df_median_stackSpace, df_stackSpace_year \u001b[39m=\u001b[39m manipulation_functions\u001b[39m.\u001b[39;49mstackInSpace(df)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X15sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m df_yearlyParam \u001b[39m=\u001b[39m manipulation_functions\u001b[39m.\u001b[39mstackSpace_yearParam(df_stackSpace_year)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/zheng/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/example/Example_Tutorial.ipynb#X15sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m manipulation_functions\u001b[39m.\u001b[39mexport_csv(input_filename,df_stackSpace_year,df_yearlyParam)\n",
+      "File \u001b[0;32m~/Desktop/Fall23/CSE583/git_test/CSE583_MtStHelens/mtsthelens/manipulation_functions.py:114\u001b[0m, in \u001b[0;36mstackInSpace\u001b[0;34m(df_rsam_median)\u001b[0m\n\u001b[1;32m    112\u001b[0m min_date \u001b[39m=\u001b[39m df_rsam_median\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mmin()\n\u001b[1;32m    113\u001b[0m max_date \u001b[39m=\u001b[39m df_rsam_median\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mmax()\n\u001b[0;32m--> 114\u001b[0m min_year \u001b[39m=\u001b[39m min_date\u001b[39m.\u001b[39;49myear()\n\u001b[1;32m    115\u001b[0m max_year \u001b[39m=\u001b[39m max_date\u001b[39m.\u001b[39myear()\n\u001b[1;32m    116\u001b[0m years \u001b[39m=\u001b[39m \u001b[39mrange\u001b[39m(min_year,max_year)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
      ]
     }
    ],
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "871d970d-015b-48a3-842d-a99ded469e9d",
    "metadata": {},
    "outputs": [
