Changed path names in example tutorial

--- a/example/example_tutorial.ipynb
+++ b/example/example_tutorial.ipynb
@@ -185,7 +185,7 @@
    ],
    "source": [
     "# df =  preprocessing_functions.read_data('../data/DSAR_extended2_long.csv')\n",
-    "df =  preprocessing_functions.read_data('../example/Example_Data/example_data_eruption.csv')\n",
+    "df =  preprocessing_functions.read_data('../example/example_data/example_data_eruption.csv')\n",
     "df"
    ]
   },
@@ -648,7 +648,7 @@
    ],
    "source": [
     "# read extrusion rate data\n",
-    "df_dome = pd.read_csv('../data/dome_extrusion.txt', header=0, skiprows=0)\n",
+    "df_dome = pd.read_csv('../example/example_data/dome_extrusion.txt', header=0, skiprows=0)\n",
     "df_dome.set_index('Date of photography',inplace=True)\n",
     "df_dome.index = pd.to_datetime(df_dome.index).tz_localize(None)\n",
     "df_dome['diff'] = df_dome['Total volume change(x 106 m3)']-df_dome['Total volume change(x 106 m3)'].shift(1)\n",
