Time stack now displays correct index. Tutorial saves timestack to CSV using manipulation functions

--- a/example/example_tutorial.ipynb
+++ b/example/example_tutorial.ipynb
@@ -108,9 +108,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_median_stackTime = manipulation_functions.stackInTime(df)\n",
-    "# manipulation_functions.export_csv(input_filename,df_stackSpace_year,df_yearlyParam)\n",
-    "df_median_stackTime.plot(figsize=(10, 6), title='Seasonality') # plot for debugging"
+    "df_stackTime = manipulation_functions.stackInTime(df)\n",
+    "manipulation_functions.export_csv('example_data_eruption_stacktime',df_stackTime)\n",
+    "df_stackTime"
    ]
   },
   {
