stackInTime now filters out the seasonality data. tutorial saves that to a csv

--- a/example/example_tutorial.ipynb
+++ b/example/example_tutorial.ipynb
@@ -40,7 +40,7 @@
     "# Go back one folder level\n",
     "parent_directory = os.path.abspath(os.path.join(current_directory, os.pardir))\n",
     "sys.path.insert(0, parent_directory)\n",
-    "from mtsthelens import preprocessing_functions, manipulation_functions, plotting_functions"
+    "from mtsthelens import preprocessing_functions, manipulation_functions#, plotting_functions"
    ]
   },
   {
@@ -108,9 +108,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_stackTime = manipulation_functions.stackInTime(df)\n",
-    "manipulation_functions.export_csv('example_data_eruption_stacktime',df_stackTime)\n",
-    "df_stackTime"
+    "df_seasonal_trends, df_seasonality_removed = manipulation_functions.stackInTime(df)\n",
+    "manipulation_functions.export_csv('example_data_eruption_stacktime', df_seasonal_trends)\n",
+    "manipulation_functions.export_csv('example_data_eruption_seasonality_removed', df_seasonality_removed)"
    ]
   },
   {
