Fully working plotting tutorials

--- a/example/example_tutorial.ipynb
+++ b/example/example_tutorial.ipynb
@@ -227,12 +227,12 @@
    "outputs": [],
    "source": [
     "# Plotting Time Stack vs Raw Data\n",
-    "plotting_functions.plot_stack_vs_raw(df_seasonal_trends, df)\n",
+    "plotting_functions.plot_stack_vs_raw(df_seasonality_removed, df)\n",
     "# Plotting Filtered Timestack vs Raw Data\n",
     "plotting_functions.plot_stack_vs_raw(df_filter, df)\n",
     "# Plotting the min, max, mean and median values\n",
     "plotting_functions.plot_space_params(df_yearlyParam)\n",
-    "plotting_functions.plot_extrusion(df_dome, df, df, df_filter)\n"
+    "plotting_functions.plot_extrusion(df_dome, df, df_seasonality_removed, df_filter)\n"
    ]
   },
   {
