--- a/example/example_tutorial.ipynb
+++ b/example/example_tutorial.ipynb
@@ -213,7 +213,7 @@
    "source": [
     "# # get the distance between the stations and sort them in increasing order (relative to station SEP -> crater center)\n",
     "# ref_sta = 'SEP' # define the reference station, we will get distance from all other stations to this station\n",
-    "# df_sta['dist'] = df_sta.apply(lambda x: preprocessing_functions.calculate_distance(x['latitude'],df_sta.latitude[df_sta['Station']==ref_sta] , x['longitude'],df_sta.longitude[df_sta['Station']==ref_sta] ), axis=1)\n",
+    "# df_sta['dist'] = df_sta.apply(lambda x: preprocessing_functions.calculate_distance(x['latitude'],df_sta.latitude[df_sta['Station']==ref_sta].values[0] , x['longitude'],df_sta.longitude[df_sta['Station']==ref_sta].values[0] ), axis=1)\n",
     "# df_sta = df_sta.sort_values(by=['dist'])\n",
     "# sta_sorted = df_sta['Station'].to_list()\n",
     "# df_sta.head()"
